--- a/CSS_3/07-ResponsiveCSS_3/flex.css
+++ b/CSS_3/07-ResponsiveCSS_3/flex.css
@@ -1,6 +1,38 @@
+.header_row {
+    display: flex;
+    align-items: center;
+    background-color: lightblue;
+    justify-content: space-between;
+    /* justify-content: space-around; */
+    /* justify-content: center; */
+    /* justify-content: flex-end; */
+    /* justify-content: flex-start; */
+    margin-bottom: 40px;
+}
+
+.logo {
+    /* flex: 1; */
+    flex-basis: 10%;
+}
+
+#main-navigation {
+    /* flex: 8; */
+    flex-basis: 50%;
+}
+
+#main-navigation ul {
+    display: flex;
+    list-style: none;
+}
+
+#main-navigation ul li {
+    margin: 0px 10px;
+}
+
 .row {
     display: flex;
     align-items: flex-start;
+    /* align-items: stretch; */
     /* align-items: flex-end; */
     /* align-items: center; */
 }
@@ -16,13 +48,34 @@ img {
 }
 
 .col-1 {
-    width: 20%;
+    /* width: 20%; */
+    flex: 1;
+    /* align-self: center; */
 }
 
 .col-2 {
-    width: 45%;
+    /* width: 45%; */
+    flex: 2;
 }
 
 .col-3 {
+    /* width: 20%; */
+    flex: 1;
+}
+
+#section_1 ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#section_1 ul li {
+    height: 200px;
     width: 20%;
+    margin-bottom: 20px;
+    background-color: red;
+    border: 2px solid #000;
 }
